# DatasetPreparator

./: .env.template  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  makefile  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  cla.yml  docker_images.yml
ci/: install_poetry.py
docker/: Dockerfile  Dockerfile.dev  docker-test-compose.yml
docs/: gen_ref_pages.py
src/datasetpreparator/: settings.py
src/datasetpreparator/dir_packager/: README.md  dir_packager.py
src/datasetpreparator/directory_flattener/: Dockerfile  README.md  directory_flattener.py
src/datasetpreparator/directory_packager/: Dockerfile  README.md  directory_packager.py
src/datasetpreparator/file_renamer/: README.md  file_renamer.py
src/datasetpreparator/json_merger/: README.md  json_merger.py
src/datasetpreparator/processed_mapping_copier/: README.md  processed_mapping_copier.py
src/datasetpreparator/sc2/sc2_map_downloader/: README.md  sc2_map_downloader.py
src/datasetpreparator/sc2/sc2_move_maps/: sc2_move_maps.py
src/datasetpreparator/sc2/sc2_update_maps_cache/: sc2_update_maps_cache.py
src/datasetpreparator/sc2/sc2egset_replaypack_processor/: README.md  sc2egset_pipeline.py  sc2egset_replaypack_processor.py
src/datasetpreparator/sc2/sc2egset_replaypack_processor/utils/: download_maps.py  file_copier.py  multiprocess.py  replaypack_processor_args.py
src/datasetpreparator/sc2/sc2reset_replaypack_downloader/: README.md  available_replaypacks.py  sc2reset_replaypack_downloader.py
src/datasetpreparator/sc2/sc2reset_replaypack_downloader/utils/: download_replaypack.py  unpack_chunk.py  unpack_zipfile.py
src/datasetpreparator/utils/: logging.py  user_prompt.py
tests/: test_main.py  test_settings.py  test_utils.py
tests/test_cases/: directory_flattener_test.py  directory_packager_test.py  file_renamer_test.py  json_merger_test.py  sc2_update_maps_cache_test.py  sc2egset_replaypack_processor_test.py  sc2reset_replaypack_downloader_test.py
