[tool.poetry]
name = "datasetpreparator"
version = "2.0.0"
description = "Tools for dataset processing."
authors = ["Andrzej 'Kaszanas' Białecki"]
license = "MIT License"
readme = "README.md"

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.0.0"
tag_format = "$version"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
sc2reader = { version = "^1.8.0", optional = true }
tqdm = { version = "^4.66.1", optional = true }
requests = { version = "^2.31.0", optional = true }


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
ruff = "^0.9.9"
pre-commit = "^4.0.1"
mkdocs = "^1.5.3"
mkdocstrings = "^0.28.2"
mkdocstrings-python = "^1.7.5"
mkdocs-material = "^9.5.3"
mkdocs-include-markdown-plugin = "^7.0.1"
mkdocs-material-extensions = "^1.3.1"
mkdocs-autorefs = "^1.2.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
commitizen = "^4.1.0"
python-dotenv = "^1.0.1"

[tool.poetry.extras]
all = ["requests", "tqdm", "sc2reader"]

[tool.pytest.ini_options]
python_files = "*_test.py"
log_cli = "true"
log_cli_level = "DEBUG"
markers = [
    "minor: marks tests as minor (deselect with '-m \"not minor\"')",
    "major",
    "run_this: marks single tests to be run with proper imports",
    "fast: marks a test with fast execution.",
    "slow: marks a test with slow execution.",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
